--- a/templates/includes/news.html
+++ b/templates/includes/news.html
@@ -6,44 +6,39 @@
 {% block content %}
 
 
-<div class="container-fluid py-5" id="news">
-    <div style="--primary: #ff0000;" class="container">
-        <div class="text-center mx-auto mb-5" style="max-width: 500px;">
-            <h5 class="d-inline-block  text-uppercase border-bottom border-5" style="color: #ff0000 !important;">
-                Янгиликлар</h5>
-            <!--                <h1 class="display-4">Awesome Medical Programs</h1>-->
-        </div>
-        <div class="owl-carousel price-carousel position-relative" style="padding: 0 45px 45px 45px;">
-
-
-
-
-
-            {% for post in object_list %}
-            <div class="bg-light rounded text-center">
-                <div class="position-relative">
-                    <img class="img-fluid rounded-top" src="{% static post.image.url %}" alt="">
-                    <div class="position-absolute w-100 h-100 top-50 start-50 translate-middle rounded-top d-flex flex-column align-items-center justify-content-center">
-                        <!--                            <h3 class="text-white">Health Checkup</h3>-->
-                        <h1 class="display-4 text-white mb-0">
-                            <!--                                <small class="align-top fw-normal" style="font-size: 22px; line-height: 45px;">$</small>99<small class="align-bottom fw-normal" style="font-size: 16px; line-height: 40px;">/ Year</small>-->
-                        </h1>
-                    </div>
-                </div>
-                <div class="text-center py-5">
-                    <p>{{ post.description }}</p>
-                    <a href="{{ post.link }}" style="background-color: #ff0000;" class="btn btn-primary rounded-pill py-3 px-5 my-2">Батафсил</a>
-                </div>
+    <div class="container-fluid py-5" id="news">
+        <div style="--primary: #ff0000;" class="container">
+            <div class="text-center mx-auto mb-5" style="max-width: 500px;">
+                <h5 class="d-inline-block  text-uppercase border-bottom border-5" style="color: #ff0000 !important;">
+                    Янгиликлар</h5>
+                <!--                <h1 class="display-4">Awesome Medical Programs</h1>-->
             </div>
-            {% endfor %}
+            <div class="owl-carousel price-carousel position-relative" style="padding: 0 45px 45px 45px;">
 
 
+                {% for post in news %}
+                    <div class="bg-light rounded text-center">
+                        <div class="position-relative">
+                            <img class="img-fluid rounded-top" src="{% static post.image.url %}" alt="">
+                            <div class="position-absolute w-100 h-100 top-50 start-50 translate-middle rounded-top d-flex flex-column align-items-center justify-content-center">
+                                <!--                            <h3 class="text-white">Health Checkup</h3>-->
+                                <h1 class="display-4 text-white mb-0">
+                                    <!--                                <small class="align-top fw-normal" style="font-size: 22px; line-height: 45px;">$</small>99<small class="align-bottom fw-normal" style="font-size: 16px; line-height: 40px;">/ Year</small>-->
+                                </h1>
+                            </div>
+                        </div>
+                        <div class="text-center py-5">
+                            <p>{{ post.description }}</p>
+                            <a href="{{ post.link }}" style="background-color: #ff0000;"
+                               class="btn btn-primary rounded-pill py-3 px-5 my-2">Батафсил</a>
+                        </div>
+                    </div>
+                {% endfor %}
 
 
-
+            </div>
         </div>
     </div>
-</div>
 {% endblock content %}
 
 <!-- Yangiliklar -->
