--- a/templates/includes/hero.html
+++ b/templates/includes/hero.html
@@ -1,20 +1,27 @@
+
+   {% extends 'imports.html' %}
+   {% load static %}
+
+{% block content %}
     <!-- Hero Start -->
     <div class="container-fluid bg-primary py-5 mb-5 hero-header">
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
 
-                    <h5 style="font-family: 'Segoe Print'; color: gold; font-size: 24px " class="d-inline-block  border-5" > «Янги йил» байрами билан табриклаймиз!</h5>
+                    <h5 style="font-family: 'Segoe Print'; color: gold; font-size: 24px " class="d-inline-block  border-5" > Кириб келаётган «Навруз» байрами билан табриклаймиз!</h5>
                     <h1 style="font-family:Verdana;" class="display-1 text-white mb-md-4">YULDUZ MED SERVICE</h1>
                     <h5 style="font-family:Verdana; color: #f5f8ff" class="d-inline-block  border-5" >Многопрофильная клиника хирургии, флебологии...</h5>
                     <div class="pt-2">
 <!--                        <a href="" class="btn btn-light rounded-pill py-md-3 px-md-5 mx-2">Find Doctor</a>-->
                         <a href="#appointment" class="btn btn-outline-light rounded-pill py-md-3 px-md-5 mx-2">Мурожаат учун</a>
-                    <h5 style="font-family:'Yu Gothic UI'; color: #f5f8ff; font-size: 14px" class="d-inline-block  border-5" > <br> Sayt sinov muddatida, noqulayliklar uchun uzr!</h5>
 
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+{% endblock %}
     <!-- Hero End -->
