--- a/templates/includes/testimonial.html
+++ b/templates/includes/testimonial.html
@@ -10,48 +10,26 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="owl-carousel testimonial-carousel">
-                    <div class="testimonial-item text-center">
-                        <div class="position-relative mb-5">
-                            <img class="img-fluid rounded-circle mx-auto" src="{% static 'img/testimonial-1.jpg' %}"
-                                 alt="">
-                            <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center bg-white rounded-circle"
-                                 style="width: 60px; height: 60px;">
-                                <i class="fa fa-quote-left fa-2x text-primary"></i>
+
+
+                    {% for review in reviews %}
+                        <div class="testimonial-item text-center">
+                            <div class="position-relative mb-5">
+                                <img class="img-fluid rounded-circle mx-auto" src="{% static review.image.url %}"
+                                     alt="">
+                                <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center bg-white rounded-circle"
+                                     style="width: 60px; height: 60px;">
+                                    <i class="fa fa-quote-left fa-2x text-primary"></i>
+                                </div>
                             </div>
+                            <p class="fs-4 fw-normal">{{ review.review }}</p>
+                            <hr class="w-25 mx-auto">
+                            <h3>{{ review.last_name }} {{ review.first_name }}</h3>
+                            <h6 class="fw-normal text-primary mb-3">Фикри</h6>
                         </div>
-                        <p class="fs-4 fw-normal">Кизло бораварингла 👏 ажойиб ку оёклорингиз варикоззи болоо уёлиб юрмисила който варикоздон👍🏻</p>
-                        <hr class="w-25 mx-auto">
-                        <h3>Шахло Курязова</h3>
-                        <h6 class="fw-normal text-primary mb-3">Фикри</h6>
-                    </div>
-                    <div class="testimonial-item text-center">
-                        <div class="position-relative mb-5">
-                            <img class="img-fluid rounded-circle mx-auto" src="{% static 'img/testimonial-2.jpg' %}"
-                                 alt="">
-                            <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center bg-white rounded-circle"
-                                 style="width: 60px; height: 60px;">
-                                <i class="fa fa-quote-left fa-2x text-primary"></i>
-                            </div>
-                        </div>
-                        <p class="fs-4 fw-normal">Борингизга шукр Бехзод доктор. Билимингиз унданда зиёда булсин. Рахмат☺👍</p>
-                        <hr class="w-25 mx-auto">
-                        <h3>Матназарова Б.</h3>
-                        <h6 class="fw-normal text-primary mb-3">Фикри</h6>
-                    </div>
-                    <div class="testimonial-item text-center">
-                        <div class="position-relative mb-5">
-                            <img class="img-fluid rounded-circle mx-auto" src="{% static 'img/testimonial-2.jpg' %}"
-                                 alt="">
-                            <div class="position-absolute top-100 start-50 translate-middle d-flex align-items-center justify-content-center bg-white rounded-circle"
-                                 style="width: 60px; height: 60px;">
-                                <i class="fa fa-quote-left fa-2x text-primary"></i>
-                            </div>
-                        </div>
-                        <p class="fs-4 fw-normal">ASALKMU ALEKUM, JUDA YAXSHI, ISHLARINGIZGA OMAN XAMIWA BEMORLARNING DARDIGA DAVO BO'LIB YURGAYSIZLAR 😊😊😊😊😊😊😊👍👍👍👍👍👍👍</p>
-                        <hr class="w-25 mx-auto">
-                        <h3>Саида М.</h3>
-                        <h6 class="fw-normal text-primary mb-3">Фикри</h6>
-                    </div>
+                    {% endfor %}
+
+
                 </div>
             </div>
         </div>
